# cpp_n_gram_tokenizer

./: .gitignore  CMakeLists.txt  README.md  build_finder.py  descriptive_stats.py  dump_dir.py  eng.imdb.test.jsonl  n_gram_classifier.py  naiive_bayes_cross_language.py  naiive_bayes_pipeline.py  requirements.txt  spa.muchocine.test.jsonl  test_pipeline_cross_language.py  test_spacy_pipeline.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
include/cpp_n_gram_tokenizer/: api.hpp
include/cpp_n_gram_tokenizer/core/: ngram_tokenizer.hpp  review.hpp
python/bindings/: ngram_tokenizer_bridge.py  ngram_tokenizer_wrapper.cpp
python/scripts/: test_ngram.py
scripts/: build.bat  build.sh
src/: api.cpp  main.cpp
src/core/: ngram_tokenizer.cpp
